tests/ui/compile-flags/removed_ar.rs
//@ compile-flags: -Car=foo

fn main() {}

//~? ERROR `-C ar`: this option has been removed
